--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -20892,6 +20892,78 @@ console.log(result);
 
 
 ---
+## 915. 分割数组
+
+给定一个数组 nums ，将其划分为两个连续子数组 left 和 right， 使得：
+
+- left 中的每个元素都小于或等于 right 中的每个元素。
+
+- left 和 right 都是非空的。
+- left 的长度要尽可能小。
+
+在完成这样的分组后返回 left 的 长度 。
+
+用例可以保证存在这样的划分方法。
+
+**两次遍历**
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var partitionDisjoint = function(nums) {
+    const n = nums.length;
+    const minRight = new Array(n).fill(0);
+    minRight[n - 1] = nums[n - 1];
+    for (let i = n - 2; i >= 0; i--) {
+        minRight[i] = Math.min(nums[i], minRight[i + 1]);
+    }
+
+    let maxLeft = 0;
+    for (let i = 0; i < n - 1; i++) {
+        maxLeft = Math.max(maxLeft, nums[i]);
+        if (maxLeft <= minRight[i + 1]) {
+            return i + 1;
+        }
+    }
+    return n - 1;
+};
+
+
+let nums = [1,1,1,0,6,12];
+console.log(partitionDisjoint(nums));
+```
+
+**一次遍历**
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var partitionDisjoint = function(nums) {
+    const n = nums.length;
+    let leftMax = nums[0], leftPos = 0, curMax = nums[0];
+    for (let i = 1; i < n - 1; i++) {
+        curMax = Math.max(curMax, nums[i]);
+        if (nums[i] < leftMax) {
+            leftMax = curMax;
+            leftPos = i;
+        }
+    }
+    return leftPos + 1;
+};
+
+
+let nums = [1,1,1,0,6,12];
+console.log(partitionDisjoint(nums));
+```
+
+
+
+----
+
 ## 917. 仅仅反转字母
 
 给你一个字符串 s ，根据下述规则反转字符串：
@@ -24980,6 +25052,38 @@ var sumOfUnique = function(nums) {
 
 
 ---
+## 1768. 交替合并字符串
+
+给你两个字符串 word1 和 word2 。请你从 word1 开始，通过交替添加字母来合并字符串。如果一个字符串比另一个字符串长，就将多出来的字母追加到合并后字符串的末尾。
+
+返回 合并后的字符串 。
+
+```js
+/**
+ * @param {string} word1
+ * @param {string} word2
+ * @return {string}
+ */
+var mergeAlternately = function(word1, word2) {
+  const m = word1.length;
+  const n = word2.length;
+  let i = 0;
+  let ans = [];
+  while (i < m && i < n) {
+    ans.push(word1[i], word2[i]);
+    i++;
+  }
+  return ans.join("") + word1.slice(i) + word2.slice(i);
+};
+
+let word1 = "abc", word2 = "pqrsb";
+console.log(mergeAlternately(word1, word2));
+```
+
+
+
+---
+
 ## 1784. 检查二进制字符串字段
 
 给你一个二进制字符串 s ，该字符串 不含前导零 。
