--- a/react/聚仙阁项目.md
+++ b/react/聚仙阁项目.md
@@ -26,169 +26,182 @@
 
 板块：
 
-1.  dm管理
+ dm管理
 
-   dm信息表：dm id，dm名，密码，手机号，性别，头像，等级，照片，描述。  
+dm信息表：dm id，dm名，密码，手机号，性别，头像，等级，照片，描述。  
 
-   ​					主持场次
+​					已主持场次
 
-   主键：dm id（自增），唯一索引：手机号，普通索引：dm名
+主键：dm id（自增），唯一索引：手机号，普通索引：dm名
 
-   ```
-   
-   ```
+```
 
-   
+```
 
-   ```less
-   .oddRow {
-     background: #DAE5D0;
-   }
-   .evenRow {
-     background: #FEFBE7;
-   }
-   th.table-head-bg {
-     background: #7895B2 !important;
-   }
-   ```
 
-   ```jsx
-   import React, { useState } from 'react'
-   
-   import { Table, Space, Image, Input, Button } from 'antd';
-   import head_img from '../images/head_img.jpg';
-   import "./index.less";
-   
-   const { Column, ColumnGroup } = Table;
-   const { Search } = Input;
-   
-   
-   
-   export default function Dungeonmaste() {
-       const dataSource = [
-           {
-               key: '1',
-               id: 1,
-               name: '张三',
-               sex: '男',
-               age: 32,
-               head_portrait: "../images/head_img.jpg",
-               level: 2,
-               img: "url",
-               description: "温和"
-           },
-           {
-               key: '2',
-               id: 2,
-               name: '张三',
-               sex: '男',
-               age: 32,
-               head_portrait: "../images/head_img.jpg",
-               level: 2,
-               img: "url",
-               description: "温和"
-           },
-           {
-               key: '3',
-               id: 3,
-               name: '张三',
-               sex: '男',
-               age: 32,
-               head_portrait: "../images/head_img.jpg",
-               level: 2,
-               photo: "url",
-               description: "温和"
-           },
-         ];
-         
-         const columns = [
-           {
-             title: '头像',
-             dataIndex: 'head_portrait',
-             key: 'head_portrait',
-             align: "center",
-             className: "table-head-bg",
-             render: (text, record) => <Image src={head_img} width={64} height={64} alt="头像"/>
-           },
-           {
-               title: '姓名',
-               dataIndex: 'name',
-               key: 'name',
-               className: "table-head-bg",
-           },
-           {
-             title: '性别',
-             dataIndex: 'sex',
-             key: 'sex',
-             className: "table-head-bg",
-           },
-           {
-               title: '年龄',
-               dataIndex: 'age',
-               key: 'age',
-               className: "table-head-bg",
-           },
-           {
-               title: '等级',
-               dataIndex: 'level',
-               key: 'level',
-               className: "table-head-bg",
-           },
-           {
-               title: '描述',
-               dataIndex: 'description',
-               key: 'description',
-               className: "table-head-bg",
-           },
-           {
-               title: '操作',
-               key: 'action',
-               render: (_, record) => (
-                   <Space size="middle">
-                       <a>编辑</a>
-                       <a>查看</a>
-                       <a>删除</a>
-                   </Space>
-               ),
-               className: "table-head-bg",
-           },
-           
-         ];
-         const onSearch = (value) => console.log(value);
-         const getRowClassName = (_, index) => {
-           return index % 2 === 0 ? "oddRow" : "evenRow";
-         }
-   
-       return (
-           <div style={{marginTop: "30px"}}>
-               <Space direction="vertical">
-                   <Search placeholder="input search text" allowClear onSearch={onSearch} style={{ width: 300 }} />
-               </Space>
-               <Table 
-                   dataSource={dataSource}
-                   columns={columns} 
-                   pagination={{ position: ["bottomCenter"] }}
-                   rowClassName={getRowClassName}
-               />
-           </div>
-       )
-   }
-   
-   ```
 
-   
+```less
+.oddRow {
+  background: #DAE5D0;
+}
+.evenRow {
+  background: #FEFBE7;
+}
+th.table-head-bg {
+  background: #7895B2 !important;
+}
+```
 
-2.  地点管理
+```jsx
+import React, { useState } from 'react'
 
-3. 剧本管理
+import { Table, Space, Image, Input, Button } from 'antd';
+// import head_img from '../images/head_img.jpg';
+import "./style/DMManagement.less"
 
-4. 剧本—dm—地点匹配管理 （联合dm端）
+const { Column, ColumnGroup } = Table;
+const { Search } = Input;
 
-5. 订单查询
 
-6. 投诉系统
+export default function DMManagement() {
+    const dataSource = [
+        {
+            key: '1',
+            id: 1,
+            name: '张三',
+            sex: '男',
+            age: 32,
+            head_portrait: "../images/head_img.jpg",
+            level: 2,
+            img: "url",
+            description: "温和"
+        },
+        {
+            key: '2',
+            id: 2,
+            name: '张三',
+            sex: '男',
+            age: 32,
+            head_portrait: "../images/head_img.jpg",
+            level: 2,
+            img: "url",
+            description: "温和"
+        },
+        {
+            key: '3',
+            id: 3,
+            name: '张三',
+            sex: '男',
+            age: 32,
+            head_portrait: "../images/head_img.jpg",
+            level: 2,
+            photo: "url",
+            description: "温和"
+        },
+      ];
+      
+      const columns = [
+        {
+          title: '头像',
+          dataIndex: 'head_portrait',
+          key: 'head_portrait',
+          align: "center",
+          className: "table-head-bg",
+        //   render: (text, record) => <Image src={head_img} width={64} height={64} alt="头像"/>
+        },
+        {
+            title: '姓名',
+            dataIndex: 'name',
+            key: 'name',
+            className: "table-head-bg",
+        },
+        {
+          title: '性别',
+          dataIndex: 'sex',
+          key: 'sex',
+          className: "table-head-bg",
+        },
+        {
+            title: '年龄',
+            dataIndex: 'age',
+            key: 'age',
+            className: "table-head-bg",
+        },
+        {
+            title: '等级',
+            dataIndex: 'level',
+            key: 'level',
+            className: "table-head-bg",
+        },
+        {
+            title: '描述',
+            dataIndex: 'description',
+            key: 'description',
+            className: "table-head-bg",
+        },
+        {
+            title: '操作',
+            key: 'action',
+            render: (_, record) => (
+                <Space size="middle">
+                    <a>编辑</a>
+                    <a>查看</a>
+                    <a>删除</a>
+                </Space>
+            ),
+            className: "table-head-bg",
+        },
+        
+      ];
+      const onSearch = (value) => console.log(value);
+      const getRowClassName = (_, index) => {
+        return index % 2 === 0 ? "oddRow" : "evenRow";
+      }
 
-7. （中间资金）
+    return (
+        <div style={{marginTop: "30px"}}>
+            <Space direction="vertical">
+                <Search placeholder="input search text" allowClear onSearch={onSearch} style={{ width: 300 }} />
+            </Space>
+            <Table 
+                dataSource={dataSource}
+                columns={columns} 
+                pagination={{ position: ["bottomCenter"] }}
+                rowClassName={getRowClassName}
+            />
+        </div>
+    )
+}
+
+
+```
+
+```
+
+```
+
+ 地点管理
+
+​		表4：店家信息表：店家 id，店家名，密码，手机号，头像，等级，开店年限，照片，描述。
+
+​			主键：店家 id（自增），唯一索引：手机号，普通索引：店家名
+
+```
+
+```
+
+剧本管理
+
+​	剧本信息表：剧本id，参考价格，剧本类型1（盒装/城限/独家），剧本类型2（情感/硬核/还原/机制等），剧本类型3（古风/民国/现代/架空/未来等），首图，发行，图片，描述。  
+
+主键：剧本id（自增），普通索引：剧本名
+
+
+
+1. 剧本—dm—地点匹配管理 （联合dm端）
+2. 订单查询
+3. 投诉系统
+4. （中间资金）
 
  
 
@@ -257,7 +270,7 @@
 git clone此仓库到本地 
 
 ```bash
-git clone https://gitee.com/LiLi-Zi/
+git clone https://gitee.com/LiLi-Zi/ju-xian-ge.git
 ```
 
 2.本地cmd中执行npm install npm可以下载相关的依赖包（node_modules文件夹里的东西） 
@@ -268,7 +281,21 @@ cnpm install npm
 
 3.npm start 可以本地调试网站
 
+```bash
+npm start
+```
 
 
 
+```
+git pull origin main
+```
+
+先拉去，再合并，提交
+
+提交的时候package-lock.json不用提交，除非有新加的第三方库
+
+```bash
+git push -u origin main:dev
+```
 
