--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19030,6 +19030,59 @@ console.log(result);
 
 ```
 
+----
+
+## 792. 匹配子序列的单词数
+
+给定字符串 s 和字符串数组 words, 返回  words[i] 中是s的子序列的单词个数 。
+
+字符串的 子序列 是从原始字符串中生成的新字符串，可以从中删去一些字符(可以是none)，而不改变其余字符的相对顺序。
+
+例如， “ace” 是 “abcde” 的子序列。
+
+
+
+同样我们还可以在朴素方法的基础上进行优化，因为朴素方法中是每一个单词分别和字符串 ss 进行匹配，这样对于每一次匹配都需要从头开始遍历字符串 ss，这增加了额外的时间开销。所以我们考虑将字符串数组words 中的全部字符串和字符串 ss 同时进行匹配——同样对于每一个需要匹配的字符串我们用一个指针来指向它需要匹配的字符，那么在遍历字符串 ss 的过程中，对于当前遍历到的字符如果有可以匹配的字符串，那么将对应的字符串指针往后移动一单位即可。那么当字符串 ss 遍历结束时，字符串数组中全部字符串的匹配情况也就全部知道了。
+
+
+
+```
+/**
+ * @param {string} s
+ * @param {string[]} words
+ * @return {number}
+ */
+var numMatchingSubseq = function(s, words) {
+  const p = new Array(26).fill(0).map(() => new Array());
+  const codeA = 'a'.charCodeAt();
+
+  for (let i = 0; i < words.length; i++) {
+    p[words[i][0].charCodeAt() - codeA].push([i, 0]);
+  }
+
+  let ans = 0;
+  for (let i = 0; i < s.length; i++) {
+    const c = s[i];
+    let len = p[c.charCodeAt() - codeA].length;
+    while (len > 0) {
+      const t = p[c.charCodeAt() - codeA].shift();
+      if (t[1] === words[t[0]].length - 1) {
+        ans++;
+      } else {
+        t[1]++;
+        p[words[t[0]][t[1]].charCodeAt() - codeA].push(t);
+      }
+      len--;
+    }
+  }
+  return ans;
+};
+
+
+let s = "abcde", words = ["a","bb","acd","ace"];
+console.log(numMatchingSubseq(s, words));
+```
+
 
 
 
@@ -25256,6 +25309,51 @@ var maxAscendingSum = function(nums) {
 let nums = [10,20,30,5,10,50];
 console.log(maxAscendingSum(nums));
 ```
+
+
+
+-----
+
+## 1822. 数组元素积的符号
+
+已知函数 signFunc(x) 将会根据 x 的正负返回特定值：
+
+如果 x 是正数，返回 1 。
+如果 x 是负数，返回 -1 。
+如果 x 是等于 0 ，返回 0 。
+给你一个整数数组 nums 。令 product 为数组 nums 中所有元素值的乘积。
+
+返回 signFunc(product) 。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var arraySign = function(nums) {
+  let ret = 1;
+  nums.forEach((item) => {
+    ret *= item;
+  });
+  if (ret > 0) {
+    return 1;
+  } else if (ret < 0) {
+    return -1;
+  } else {
+    return 0;
+  }
+};
+
+
+let nums = [-1,-2,-3,-4,3,2,1];
+console.log(arraySign(nums));
+```
+
+
+
+
 
 
 
