--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -20583,6 +20583,41 @@ const match = (word, pattern) => {
 
 ```
 
+----
+
+## 891. 子序列宽度之和
+
+一个序列的 宽度 定义为该序列中最大元素和最小元素的差值。
+
+给你一个整数数组 nums ，返回 nums 的所有非空 子序列 的 宽度之和 。由于答案可能非常大，请返回对 10^9 + 7 取余 后的结果。
+
+子序列 定义为从一个数组里删除一些（或者不删除）元素，但不改变剩下元素的顺序得到的数组。例如，[3,6,2,7] 就是数组 [0,3,1,6,2,2,7] 的一个子序列。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var sumSubseqWidths = function(nums) {
+  const MOD = 1000000007;
+  nums.sort((a, b) => a - b);
+  let ans = 0;
+  let x = nums[0], y = 2;
+  for (let j = 1; j < nums.length; j++) {
+    ans = (ans + nums[j] * (y - 1) - x) % MOD;
+    x = (x * 2 + nums[j]) % MOD;
+    y = y * 2 % MOD;
+  }
+  return (ans + MOD) % MOD;
+};
+
+let nums = [2,1,3];
+console.log(sumSubseqWidths(nums));
+
+```
+
+
+
 
 
 ----
@@ -25029,6 +25064,35 @@ var canMouseWin = function(grid, catJump, mouseJump) {
 let grid = ["####F","#C...","M...."], catJump = 1, mouseJump = 2;
 let result=canMouseWin(grid, catJump, mouseJump);
 console.log(result);
+```
+
+
+
+----
+
+## 1732. 找到最高海拔
+
+有一个自行车手打算进行一场公路骑行，这条路线总共由 n + 1 个不同海拔的点组成。自行车手从海拔为 0 的点 0 开始骑行。
+
+给你一个长度为 n 的整数数组 gain ，其中 gain[i] 是点 i 和点 i + 1 的 净海拔高度差（0 <= i < n）。请你返回 最高点的海拔 。
+
+```js
+/**
+ * @param {number[]} gain
+ * @return {number}
+ */
+var largestAltitude = function(gain) {
+  let height = 0, maxHeight = 0;
+  for (let i = 0; i < gain.length; i++) {
+    height += gain[i];
+    maxHeight = Math.max(height, maxHeight);
+  }
+  return maxHeight;
+};
+
+let gain = [-5,1,5,0,-7];
+console.log(largestAltitude(gain));
+
 ```
 
 
