--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19155,6 +19155,48 @@ var rotateString = function(s, goal) {
 
 
 ---
+## 799. 香槟塔
+
+我们把玻璃杯摆成金字塔的形状，其中 第一层 有 1 个玻璃杯， 第二层 有 2 个，依次类推到第 100 层，每个玻璃杯 (250ml) 将盛有香槟。
+
+从顶层的第一个玻璃杯开始倾倒一些香槟，当顶层的杯子满了，任何溢出的香槟都会立刻等流量的流向左右两侧的玻璃杯。当左右两边的杯子也满了，就会等流量的流向它们左右两边的杯子，依次类推。（当最底层的玻璃杯满了，香槟会流到地板上）
+
+例如，在倾倒一杯香槟后，最顶层的玻璃杯满了。倾倒了两杯香槟后，第二层的两个玻璃杯各自盛放一半的香槟。在倒三杯香槟后，第二层的香槟满了 - 此时总共有三个满的玻璃杯。在倒第四杯后，第三层中间的玻璃杯盛放了一半的香槟，他两边的玻璃杯各自盛放了四分之一的香槟，如下图所示。
+
+现在当倾倒了非负整数杯香槟后，返回第 i 行 j 个玻璃杯所盛放的香槟占玻璃杯容积的比例（ i 和 j 都从0开始）。
+
+```js
+/**
+ * @param {number} poured
+ * @param {number} query_row
+ * @param {number} query_glass
+ * @return {number}
+ */
+var champagneTower = function(poured, query_row, query_glass) {
+  let row = [poured];
+  for (let i = 1; i <= query_row; i++) {
+    const nextRow = new Array(i + 1).fill(0);
+    for (let j = 0; j < i; j++) {
+      const volume = row[j];
+      if (volume > 1) {
+        nextRow[j] += (volume - 1) / 2;
+        nextRow[j + 1] += (volume - 1) / 2;
+      }
+    }
+    row = nextRow;
+  }
+  return Math.min(1, row[query_glass])
+};
+
+let poured = 100000009, query_row = 33, query_glass = 17;
+console.log(champagneTower(poured, query_row, query_glass));
+
+```
+
+
+
+----
+
 ## 801. 使序列递增的最小交换次数
 
 我们有两个长度相等且不为空的整型数组 nums1 和 nums2 。在一次操作中，我们可以交换 nums1[i] 和 nums2[i]的元素。
