--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19085,6 +19085,46 @@ console.log(numMatchingSubseq(s, words));
 
 
 
+----
+
+## 795. 区间子数组个数
+
+给你一个整数数组 nums 和两个整数：left 及 right 。找出 nums 中连续、非空且其中最大元素在范围 [left, right] 内的子数组，并返回满足条件的子数组的个数。
+
+生成的测试用例保证结果符合 32-bit 整数范围。
+
+ 
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} left
+ * @param {number} right
+ * @return {number}
+ */
+var numSubarrayBoundedMax = function(nums, left, right) {
+  let res = 0, last2 = -1, last1 = -1;
+  for (let i = 0; i < nums.length; i++) {
+    if (nums[i] >= left && nums[i] <= right) {
+      last1 = i;
+    } else if (nums[i] > right) {
+      last2 = i;
+      last1 = -1;
+    }
+    if (last1 !== -1) {
+      res += last1 - last2;
+    }
+  }
+  return res;
+};
+
+let nums = [2,1,4,3], left = 2, right = 3;
+console.log(numSubarrayBoundedMax(nums, left, right));
+
+```
+
+
+
 
 ---
 ## 796.旋转字符串
@@ -20572,6 +20612,53 @@ console.log(minEatingSpeed(piles, h));
 ```
 
 ---
+
+## 878. 第 N 个神奇数字
+
+一个正整数如果能被 a 或 b 整除，那么它是神奇的。
+
+给定三个整数 n , a , b ，返回第 n 个神奇的数字。因为答案可能很大，所以返回答案 对 109 + 7 取模 后的值。
+
+```js
+/**
+ * @param {number} n
+ * @param {number} a
+ * @param {number} b
+ * @return {number}
+ */
+var nthMagicalNumber = function(n, a, b) {
+  const MOD = 1000000007;
+  let l = Math.min(a, b);
+  let r = n * Math.min(a, b);
+  const c = lcm(a, b);
+  while (l <= r) {
+    const mid = Math.floor((l + r) / 2);
+    const cnt = Math.floor(mid / a) + Math.floor(mid / b) - Math.floor(mid / c);
+    if (cnt >= n) {
+      r = mid - 1;
+    } else {
+      l = mid + 1;
+    }
+  }
+  return (r + 1) % MOD;
+};
+
+const lcm = (a, b) => {
+  return Math.floor(a * b / gcd(a, b));
+}
+
+const gcd = (a, b) => {
+  return b !== 0 ? gcd(b, a % b) : a;
+}
+
+let n = 4, a = 2, b = 3;
+console.log(nthMagicalNumber(n, a, b));
+
+```
+
+
+
+----
 
 ## 886. 可能的二分法
 
