--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -25410,6 +25410,39 @@ var sumOfUnique = function(nums) {
 
 
 ---
+## 1758. 生成交替二进制字符串的最少操作数
+
+给你一个仅由字符 '0' 和 '1' 组成的字符串 s 。一步操作中，你可以将任一 '0' 变成 '1' ，或者将 '1' 变成 '0' 。
+
+交替字符串 定义为：如果字符串中不存在相邻两个字符相等的情况，那么该字符串就是交替字符串。例如，字符串 "010" 是交替字符串，而字符串 "0100" 不是。
+
+返回使 s 变成 交替字符串 所需的 最少 操作数。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var minOperations = function(s) {
+  let cnt = 0;
+  for (let i = 0; i < s.length; i++) {
+    const c = s[i];
+    if (c !== (String.fromCharCode('0'.charCodeAt() + i % 2))) {
+      cnt++;
+    }
+  }
+  return Math.min(cnt, s.length - cnt);
+};
+
+let s = "0100";
+console.log(minOperations(s));
+
+```
+
+
+
+----
+
 ## 1768. 交替合并字符串
 
 给你两个字符串 word1 和 word2 。请你从 word1 开始，通过交替添加字母来合并字符串。如果一个字符串比另一个字符串长，就将多出来的字母追加到合并后字符串的末尾。
