--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -23101,6 +23101,65 @@ var defangIPaddr = function(address) {
 };
 ```
 
+----
+
+## 1129. 颜色交替的最短路径
+
+在一个有向图中，节点分别标记为 0, 1, ..., n-1。图中每条边为红色或者蓝色，且存在自环或平行边。
+
+red_edges 中的每一个 [i, j] 对表示从节点 i 到节点 j 的红色有向边。类似地，blue_edges 中的每一个 [i, j] 对表示从节点 i 到节点 j 的蓝色有向边。
+
+返回长度为 n 的数组 answer，其中 answer[X] 是从节点 0 到节点 X 的红色边和蓝色边交替出现的最短路径的长度。如果不存在这样的路径，那么 answer[x] = -1。
+
+广度优先搜索
+
+```js
+/**
+ * @param {number} n
+ * @param {number[][]} redEdges
+ * @param {number[][]} blueEdges
+ * @return {number[]}
+ */
+var shortestAlternatingPaths = function(n, redEdges, blueEdges) {
+	const next = new Array(2).fill(0).map(() => new Array(n).fill(0).map(() => new Array()));
+	for (const edge of redEdges) {
+		next[0][edge[0]].push(edge[1]);
+	}
+	for (const edge of blueEdges) {
+		next[1][edge[0]].push(edge[1]);
+	}
+	const dist = new Array(2).fill(0).map(() => new Array(n).fill(Number.MAX_VALUE));  // 两种类型的颜色最短路径的长度
+	const queue = [];
+	dist[0][0] = 0;
+	dist[1][0] = 0;
+	queue.push([0, 0]);
+	queue.push([0, 1]);
+	while (queue.length) {
+		const pair = queue.shift();
+		let x = pair[0], t = pair[1];
+		for (let y of next[1 - t][x]) {
+			if (dist[1 - t][y] !== Number.MAX_VALUE) {
+				continue;
+			}
+			dist[1 - t][y] = dist[t][x] + 1;
+			queue.push([y, 1 - t]);
+		}
+	}
+	const answer = new Array(n).fill(0);
+	for (let i = 0; i < n; i++) {
+		answer[i] = Math.min(dist[0][i], dist[1][i]);
+		if (answer[i] === Number.MAX_VALUE) {
+			answer[i] = -1;
+		}
+	}
+	return answer;
+};
+
+let n = 3, red_edges = [[0,1],[1,2]], blue_edges = [];
+let result = shortestAlternatingPaths(n, red_edges, blue_edges);
+console.log(result);
+```
+
 
 
 ----
